# TRaat

./: .gitignore  dune-project  traat.opam  unification.opam
deprecated/: _egraph.ml  test_egraph.ml
lib/: base.ml  basic_unification.ml  completion.ml  critical.ml  dune  egraph.ml  matching.ml  orders.ml  rewriting.ml  unification.ml  unionFind.ml
test/: dune  test_base.ml  test_egraph.ml  test_unification.ml  test_unionFind.ml
